<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deliver_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sung@todo.todo">sung</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- esp32_serial dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- Cartographer dependencies -->
  <depend>cartographer_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  
  <!-- Map server dependencies -->
  <depend>nav2_map_server</depend>
  <depend>nav2_lifecycle_manager</depend>

  <!-- Ekf dependencies -->
  <exec_depend>robot_localization</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
